[gd_scene load_steps=27 format=2]

[ext_resource path="res://resimler/AnaArkaplan.webp" type="Texture" id=1]
[ext_resource path="res://resimler/tanri_portre_cerceve.webp" type="Texture" id=2]
[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resimler/button_alt_ana_disabled.webp" type="Texture" id=4]
[ext_resource path="res://resimler/zaman_bar.webp" type="Texture" id=5]
[ext_resource path="res://resimler/zaman_bar_doldurma.webp" type="Texture" id=6]
[ext_resource path="res://sceneler/AnaKontrol.gd" type="Script" id=7]
[ext_resource path="res://resimler/saat.webp" type="Texture" id=8]
[ext_resource path="res://resimler/ses_acik.webp" type="Texture" id=9]
[ext_resource path="res://resimler/muzik_acik.webp" type="Texture" id=10]
[ext_resource path="res://resimler/cikis.webp" type="Texture" id=11]
[ext_resource path="res://resimler/ayarlar.webp" type="Texture" id=12]
[ext_resource path="res://resimler/bilgilendirme.webp" type="Texture" id=13]
[ext_resource path="res://resimler/mail.webp" type="Texture" id=14]
[ext_resource path="res://resimler/button_alt_ana.webp" type="Texture" id=15]
[ext_resource path="res://resimler/buton_alt_tiklama.webp" type="Texture" id=16]
[ext_resource path="res://sceneler/Galaksi.tscn" type="PackedScene" id=18]
[ext_resource path="res://resimler/bildirim.webp" type="Texture" id=20]
[ext_resource path="res://resimler/ses_kapali.webp" type="Texture" id=21]
[ext_resource path="res://resimler/muzik_kapali.webp" type="Texture" id=22]
[ext_resource path="res://resimler/gumus_para.webp" type="Texture" id=25]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
outline_color = Color( 1, 0.513726, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 1
outline_color = Color( 0.25098, 0.247059, 0.247059, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 23
outline_size = 2
outline_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 2
outline_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="AnaKontrol" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Ana" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.12256
margin_bottom = -2.12256
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DikeyBolucu" type="VBoxContainer" parent="Ana"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -19.0

[node name="Ust" type="ColorRect" parent="Ana/DikeyBolucu"]
margin_right = 729.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0.623529 )

[node name="YatayBolucuUst" type="HBoxContainer" parent="Ana/DikeyBolucu/Ust"]
margin_right = 716.0
margin_bottom = 154.0
size_flags_horizontal = 3
custom_constants/separation = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IlkBolum" type="VBoxContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst"]
margin_right = 150.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TanriPorteCerceve" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IlkBolum"]
margin_right = 150.0
margin_bottom = 150.0
texture_normal = ExtResource( 2 )

[node name="TanriPortre" type="TextureRect" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IlkBolum/TanriPorteCerceve"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5417
margin_top = -46.5417
margin_right = 92.4583
margin_bottom = 83.4583
rect_scale = Vector2( 0.6, 0.6 )

[node name="TanriIsmi" type="Label" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IlkBolum/TanriPorteCerceve"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.0
margin_top = -36.0
margin_right = 60.0
custom_colors/font_color = Color( 0, 0.0156863, 0.32549, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IkinciBolum" type="VBoxContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst"]
margin_left = 171.0
margin_right = 621.0
margin_bottom = 154.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ortalayici" type="CenterContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum"]
margin_right = 450.0
margin_bottom = 55.0

[node name="GallantandDivine" type="Label" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/Ortalayici"]
margin_left = 10.0
margin_right = 440.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "Gallant and Divine"
align = 1
valign = 1

[node name="Ortalayici2" type="CenterContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum"]
margin_top = 59.0
margin_right = 450.0
margin_bottom = 100.0

[node name="ZamanBar" type="TextureProgress" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/Ortalayici2"]
margin_left = 20.0
margin_right = 430.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 40 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="ZamanBarYazisi" type="Label" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/Ortalayici2/ZamanBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -16.0
margin_right = 43.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZamanBarSaat" type="TextureRect" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/Ortalayici2/ZamanBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -20.5
margin_right = 5.0
margin_bottom = 20.5
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButonBar" type="HBoxContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum"]
margin_top = 104.0
margin_right = 450.0
margin_bottom = 144.0
custom_constants/separation = 30
alignment = 1

[node name="Ses" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar"]
margin_left = 170.0
margin_right = 210.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 21 )

[node name="Muzik" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 22 )

[node name="TextureButton2" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar"]
visible = false
margin_left = 205.0
margin_right = 245.0
margin_bottom = 40.0
texture_normal = ExtResource( 14 )

[node name="TextureButton3" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar"]
visible = false
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
texture_normal = ExtResource( 13 )

[node name="Bildirim" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar"]
visible = false
margin_left = 276.0
margin_right = 316.0
margin_bottom = 40.0
texture_normal = ExtResource( 20 )

[node name="UcuncuBolum" type="VBoxContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst"]
margin_left = 642.0
margin_right = 697.0
margin_bottom = 154.0
size_flags_vertical = 3
custom_constants/separation = 9
alignment = 1

[node name="Cikis" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/UcuncuBolum"]
margin_top = 49.0
margin_right = 55.0
margin_bottom = 104.0
rect_min_size = Vector2( 55, 55 )
texture_normal = ExtResource( 11 )
expand = true

[node name="TextureButton" type="TextureButton" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst/UcuncuBolum"]
visible = false
margin_top = 81.0
margin_right = 55.0
margin_bottom = 136.0
rect_min_size = Vector2( 55, 55 )
texture_normal = ExtResource( 12 )
expand = true

[node name="bosluk" type="CenterContainer" parent="Ana/DikeyBolucu/Ust/YatayBolucuUst"]
margin_left = 718.0
margin_right = 718.0
margin_bottom = 154.0
size_flags_horizontal = 3

[node name="Galaxy" parent="Ana/DikeyBolucu" instance=ExtResource( 18 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 154.0
margin_right = 729.0
margin_bottom = 1262.0

[node name="Alt" type="ColorRect" parent="Ana/DikeyBolucu"]
margin_top = 1266.0
margin_right = 729.0
margin_bottom = 1366.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0.623529 )

[node name="YatayBolucu" type="VBoxContainer" parent="Ana/DikeyBolucu/Alt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -349.0
margin_top = -50.0
margin_right = 349.0
margin_bottom = 50.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DikeyBolucuUSt" type="HBoxContainer" parent="Ana/DikeyBolucu/Alt/YatayBolucu"]
margin_right = 698.0
margin_bottom = 50.0
size_flags_vertical = 3

[node name="Galaksi" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt"]
margin_right = 170.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Galaxy" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Galaksi"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -15.0
margin_right = 43.5
margin_bottom = 15.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "Galaxy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Journey" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Journey" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Journey"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -13.0
margin_right = 47.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "Journey"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panteon" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt"]
margin_left = 348.0
margin_right = 518.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Panteon" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Panteon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -13.0
margin_right = 48.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "Panteon"

[node name="Titanomahia" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt"]
margin_left = 522.0
margin_right = 692.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="GodvsGod" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Titanomahia"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 5 )
text = "Titanomahia"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DikeyBolucuAlt" type="HBoxContainer" parent="Ana/DikeyBolucu/Alt/YatayBolucu"]
margin_top = 50.0
margin_right = 698.0
margin_bottom = 100.0
size_flags_vertical = 3

[node name="Possession" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt"]
margin_right = 170.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Possession" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/Possession"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -13.0
margin_right = 63.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "Possession"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revelations" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Revelations" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/Revelations"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5
margin_top = -14.0
margin_right = 69.5
margin_bottom = 14.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "Revelations"
align = 1

[node name="Causerie" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt"]
margin_left = 348.0
margin_right = 518.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Causerie" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/Causerie"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -13.0
margin_right = 51.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "Causerie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodsStore" type="TextureButton" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt"]
margin_left = 522.0
margin_right = 692.0
margin_bottom = 50.0
disabled = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/GodsStore"]
margin_left = -3.0
margin_top = 17.0
margin_right = 42.0
margin_bottom = 47.0
rect_scale = Vector2( 0.6, 0.8 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gods Store" type="Label" parent="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/GodsStore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -13.0
margin_right = 65.5
margin_bottom = 13.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 4 )
text = "God's Store"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Ana/DikeyBolucu/Ust/YatayBolucuUst/IlkBolum/TanriPorteCerceve" to="." method="_on_TanriPorteCerceve_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar/Ses" to="." method="_on_Ses_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Ust/YatayBolucuUst/IkinciBolum/ButonBar/Muzik" to="." method="_on_Muzik_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Ust/YatayBolucuUst/UcuncuBolum/Cikis" to="." method="_on_Cikis_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Galaksi" to="." method="_on_Galaksi_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Journey" to="." method="_on_Journey_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Panteon" to="." method="_on_Panteon_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuUSt/Titanomahia" to="." method="_on_Titanomahia_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/Possession" to="." method="_on_Possession_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/Revelations" to="." method="_on_Revelations_pressed"]
[connection signal="pressed" from="Ana/DikeyBolucu/Alt/YatayBolucu/DikeyBolucuAlt/Causerie" to="." method="_on_Causerie_pressed"]
